--- a/app/src/main/res/layout/category_1.xml
+++ b/app/src/main/res/layout/category_1.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView2"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
         android:id="@+id/imageView"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,14 +42,14 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/rowConPattern"
-                android:layout_width="411dp"
-                android:layout_height="match_parent">
+                android:layout_width="731dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/timeLeftTxt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:textAlignment="viewEnd"
                     android:textColor="#000000"
@@ -59,9 +59,9 @@
 
                 <TextView
                     android:id="@+id/pointsPattern"
-                    android:layout_width="45dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="16dp"
                     android:text="@string/pts"
                     android:textColor="#000000"
                     android:textSize="30sp"
@@ -73,6 +73,7 @@
                     android:id="@+id/categoryPattern"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
+                    android:text="category"
                     android:textColor="#000000"
                     android:textSize="30sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -83,12 +84,13 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="80dp">
+            android:layout_width="894dp"
+            android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="1dp">
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1">
 
                 <ImageView
                     android:id="@+id/imageView6"
