Started adding more categories

--- a/app/src/main/res/layout-land/activity_categories.xml
+++ b/app/src/main/res/layout-land/activity_categories.xml
@@ -10,20 +10,21 @@
         android:id="@+id/doneBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="256dp"
         android:onClick="startGame"
         android:text="@string/doneText"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="128dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/doneBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -46,7 +47,6 @@
                 android:id="@+id/capitalsSwt"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
                 android:text="@string/capitalsText"
                 android:textSize="24sp"
@@ -57,7 +57,6 @@
                 android:id="@+id/animalsSwt"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
                 android:text="@string/animalsText"
                 android:textSize="24sp"
@@ -68,7 +67,6 @@
                 android:id="@+id/plantsSwt"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
                 android:text="@string/plantsText"
                 android:textSize="24sp"
@@ -81,7 +79,6 @@
                 android:id="@+id/mountainsSwt"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
                 android:text="@string/mountainsText"
                 android:textSize="24sp"
@@ -92,7 +89,6 @@
                 android:id="@+id/riversSwt"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="16dp"
                 android:minHeight="48dp"
                 android:text="@string/riversLakes"
                 android:textSize="24sp"
